Alignment fix

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ p {
 }
 
 .menu-bar {
-	padding-top: 15px;
+	padding-top: 10px;
 	padding-bottom: 10px;
 	background-color: #EAEAEA;
 }
